fixes for faster persistency

--- a/LoadBalancing/appsettings.json
+++ b/LoadBalancing/appsettings.json
@@ -5,5 +5,36 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ReverseProxy": {
+    "Routes": {
+      "route1": {
+        "ClusterId": "cluster1",
+        "RateLimiterPolicy": "sliding",
+        "Match": {
+          "Path": "{**catch-all}"
+        }
+      }
+    },
+    "Clusters": {
+      "cluster1": {
+        "LoadBalancingPolicy": "PowerOfTwoChoices",
+        "Destinations": {
+          "cluster1/destination1": {
+            "Address": "http://192.168.0.243:5000/"
+          },
+          "cluster1/destination2": {
+            "Address": "http://192.168.0.243:5001/"
+          }
+        }
+      }
+    }
+  },
+  "rate-limit": {
+    "PermitLimit": 80,
+    "Window": 1,
+    "QueueProcessingOrder": 0,
+    "QueueLimit": 40,
+    "SegmentsPerWindow": 40
+  }
 }
