--- a/ProtoActor.PoC/appsettings.json
+++ b/ProtoActor.PoC/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=localhost;Port=5432;Database=EventsDb;Uid=postgres;Pwd=admin;"
+    "Default": "Server=localhost;Port=5432;Database=EventsDb;Uid=postgres;Pwd=admin;Command Timeout=60"
   }
 }
