--- a/LoadBalancing/Properties/launchSettings.json
+++ b/LoadBalancing/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5227",
+      "applicationUrl": "http://localhost:5227;http://192.168.0.243:5227",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
