--- a/ProtoActor.PoC/ProtoActor.PoC.csproj
+++ b/ProtoActor.PoC/ProtoActor.PoC.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -7,13 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Google.Protobuf" Version="3.27.2"/>
-        <PackageReference Include="Grpc.Tools" Version="2.64.0">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
+        <PackageReference Include="Dumpify" Version="0.6.6"/>
+        <PackageReference Include="Dunet" Version="1.11.2"/>
         <PackageReference Include="Marten" Version="7.20.1"/>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2"/>
+        <PackageReference Include="Microsoft.Extensions.Diagnostics.ResourceMonitoring" Version="8.7.0"/>
         <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2"/>
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0"/>
         <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.9.0"/>
@@ -21,24 +19,24 @@
         <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.9.0"/>
         <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.9.0"/>
         <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.9.0"/>
-        <PackageReference Include="Proto.Actor" Version="1.6.0"/>
-        <PackageReference Include="Proto.Cluster" Version="1.6.0"/>
-        <PackageReference Include="Proto.Cluster.CodeGen" Version="1.6.0"/>
-        <PackageReference Include="Proto.Cluster.Consul" Version="1.6.0"/>
-        <PackageReference Include="Proto.Cluster.TestProvider" Version="1.6.0"/>
-        <PackageReference Include="Proto.OpenTelemetry" Version="1.6.0"/>
-        <PackageReference Include="Proto.Persistence" Version="1.6.0"/>
-        <PackageReference Include="Proto.Persistence.Marten" Version="1.6.0"/>
+        <PackageReference Include="OpenTelemetry.Instrumentation.Process" Version="0.5.0-beta.6"/>
+        <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.9.0"/>
+        <PackageReference Include="Proto.Actor" Version="1.6.1-alpha.0.22"/>
+        <PackageReference Include="Proto.Cluster" Version="1.6.1-alpha.0.22"/>
+        <PackageReference Include="Proto.Cluster.CodeGen" Version="1.6.1-alpha.0.22"/>
+        <PackageReference Include="Proto.Cluster.Consul" Version="1.6.1-alpha.0.22"/>
+        <PackageReference Include="Proto.Cluster.TestProvider" Version="1.6.1-alpha.0.22"/>
+        <PackageReference Include="Proto.OpenTelemetry" Version="1.6.1-alpha.0.22"/>
+        <PackageReference Include="Proto.Persistence" Version="1.6.1-alpha.0.22"/>
+        <PackageReference Include="Proto.Persistence.Marten" Version="1.6.1-alpha.0.22"/>
         <PackageReference Include="Proto.Persistence.PgSql" Version="0.2.1"/>
-        <PackageReference Include="Proto.Remote" Version="1.6.0"/>
+        <PackageReference Include="Proto.Remote" Version="1.6.1-alpha.0.22"/>
         <PackageReference Include="SharpAbp.Abp.OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="3.3.7"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
-    </ItemGroup>
-    <ItemGroup>
-        <Protobuf Include="Grains.proto"/>
-    </ItemGroup>
-    <ItemGroup>
-        <ProtoGrain Include="Grains.proto" AdditionalImportDirs="."/>
+        <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="9.0.0-preview.6.24327.7"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\Messages\Messages.csproj"/>
+    </ItemGroup>
 </Project>
