--- a/ProtoActor.PoC/docker-compose.yml
+++ b/ProtoActor.PoC/docker-compose.yml
@@ -1,14 +1,14 @@
 version: "3"
 
 services:
-  
+
   loki:
-    image: grafana/loki:2.4.1
+    image: grafana/loki
     ports:
       - "3100:3100"
-  
+
   grafana:
-    image: grafana/grafana:8.3.3
+    image: grafana/grafana
     ports:
       - "3000:3000"
     environment:
@@ -18,14 +18,14 @@ services:
       - ./grafana/provisioning/datasources.yml:/etc/grafana/provisioning/datasources/datasources.yaml
       - ./grafana/provisioning/dashboards.yml:/etc/grafana/provisioning/dashboards/dashboards.yaml
       - ./grafana/dashboards:/var/lib/grafana/dashboards
-  
+
   jaeger:
     image: jaegertracing/all-in-one:1.28
     ports:
-      - "16686:16686"  # Jaeger UI
+      - "16686:16686" # Jaeger UI
       - "6831:6831/udp"
       - "14250"
-  
+
   prometheus:
     image: prom/prometheus:v2.32.1
     ports:
@@ -39,12 +39,11 @@ services:
     volumes:
       - ./otel-collector/otel-collector-config.yml:/etc/otel-collector-config.yml
     ports:
-      - "8888:8888"   # Prometheus metrics exposed by the collector
-      - "8889:8889"   # Prometheus exporter metrics
-      - "4317:4317"   # OTLP gRPC receiver
+      - "8888:8888" # Prometheus metrics exposed by the collector
+      - "8889:8889" # Prometheus exporter metrics
+      - "4317:4317" # OTLP gRPC receiver
       - "35670:55679" # zpages extension
-  
-  
+
   consul-agent-1: &consul-agent
     image: hashicorp/consul
     networks:
@@ -72,6 +71,26 @@ services:
       - "8600:8600"
       - "8600:8600/udp"
     command: "agent -server -bootstrap-expect 3 -ui -client 0.0.0.0"
+
+  db:
+    image: postgres
+    restart: always
+    # or set shared memory limit when deploy via swarm stack
+    #volumes:
+    #  - type: tmpfs
+    #    target: /dev/shm
+    #    tmpfs:
+    #      size: 134217728 # 128*2^20 bytes = 128Mb
+    environment:
+      POSTGRES_PASSWORD: admin
+    ports:
+      - 5432:5432
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+        - 8080:8080
 
 networks:
   consul-demo:
