--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -9,15 +9,25 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2"/>
-        <PackageReference Include="Proto.Actor" Version="1.6.0"/>
-        <PackageReference Include="Proto.Cluster" Version="1.6.0"/>
-        <PackageReference Include="Proto.Cluster.Consul" Version="1.6.0"/>
+        <PackageReference Include="Microsoft.Extensions.Diagnostics.ResourceMonitoring" Version="8.7.0"/>
+        <PackageReference Include="OpenTelemetry" Version="1.9.0"/>
+        <PackageReference Include="OpenTelemetry.Api" Version="1.9.0"/>
+        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.9.0"/>
+        <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.9.0"/>
+        <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.9.0"/>
+        <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.9.0"/>
+        <PackageReference Include="OpenTelemetry.Instrumentation.Process" Version="0.5.0-beta.6"/>
+        <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.9.0"/>
+        <PackageReference Include="Proto.Actor" Version="1.6.1-alpha.0.22"/>
+        <PackageReference Include="Proto.Cluster" Version="1.6.1-alpha.0.22"/>
+        <PackageReference Include="Proto.Cluster.Consul" Version="1.6.1-alpha.0.22"/>
+        <PackageReference Include="Proto.OpenTelemetry" Version="1.6.1-alpha.0.22"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
-        <PackageReference Include="Yarp.ReverseProxy" Version="2.1.0"/>
+        <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="8.0.1"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\ProtoActor.PoC\ProtoActor.PoC.csproj"/>
+        <ProjectReference Include="..\Messages\Messages.csproj"/>
     </ItemGroup>
 
 </Project>
